--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^4.1.3",
+    "@tanstack/react-query": "^5.69.0",
     "axios": "^1.8.4",
     "next": "15.2.3",
     "react": "^19.0.0",
